# static-site-scraper

./: LICENSE  README.md  pyproject.toml  requirements.txt  static_site_scraper.py
